syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message ChessMonsterInfo {
	uint32 monster_id = 1;
	uint32 level = 2;
	repeated uint32 affix_list = 3;
}
