syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";


message ItemHint {
	uint32 item_id = 1;
	uint32 count = 2;
	bool is_new = 3;
}
